Fix subfooter bg color at white for dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -102,6 +102,10 @@
     }
 }
 
+.n8n-subfooter {
+    background-color: #fff;
+}
+
 .n8n-impressum {
 
   box-sizing: border-box;
